Project

General

Profile

Actions

Bug #8327

closed

logadm: misleading-indentation

Added by Toomas Soome over 6 years ago. Updated over 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
2017-06-04
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build error from gcc 6:

main.c: In function 'dologname':
main.c:546:3: error: this 'while' clause does not guard... [-Werror=misleading-indentation]
   while ((nextfnp = fn_list_next(logfiles)) != NULL)
   ^~~~~
main.c:548:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'while'
    if (buf != NULL)
    ^~
main.c: In function 'expirefiles':
main.c:904:3: error: this 'while' clause does not guard... [-Werror=misleading-indentation]
   while ((nextfnp = fn_list_next(files)) != NULL)
   ^~~~~
main.c:906:4: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'while'
    if (buf != NULL)
    ^~
cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 32d56ddc1c38ba72380fb34cf6b2cea48f5bd414

commit  32d56ddc1c38ba72380fb34cf6b2cea48f5bd414
Author: Toomas Soome <tsoome@me.com>
Date:   2017-06-12T00:29:35.000Z

    8327 logadm: misleading-indentation
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Reviewed by: Gordon Ross <gordon.w.ross@gmail.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF